# RangeQuery

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake  google_test  google_test[1]_include.cmake  google_test[1]_tests.cmake  run.sh  run_benchmarks.py  set_bench  std-set  tree  tree.hpp  tree_bench
graphviz_output/: after_insert_1.dot
include/: dump.hpp  node.hpp  tree.hpp  verify_tree.hpp
src/: google_test.cpp  main.cpp  set.cpp  std-set.cpp  tree.cpp  tree_gen.cpp
statistics/: plot.py  time.txt  time_comparison.txt  tree_gen.cpp
statistics/RB_Tree-time/: test2.out
statistics/set-time/: test2.out  test3.out  test5.out  test7.out  test8.out
statistics/set-time-results/: test1.out  test2.txt  test3.txt  test4.out  test4.txt  test5.txt  test6.out  test6.txt  test7.txt  test8.txt
statistics/tree-time-results/: test1.txt  test2.txt  test3.out  test3.txt  test4.out  test4.txt  test5.out  test5.txt  test6.out  test6.txt  test7.out  test7.txt  test8.out  test8.txt
